--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,11 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "algolia/algoliasearch-client-php": "^4.4",
+        "babenkoivan/elastic-scout-driver": "*",
         "laravel/framework": "^11.9",
+        "laravel/sanctum": "^4.0",
+        "laravel/scout": "^10.11",
         "laravel/tinker": "^2.9"
     },
     "require-dev": {
